--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/BND_ADM_DONG_PG.zip filter=lfs diff=lfs merge=lfs -text
 data/emd_20230729.zip filter=lfs diff=lfs merge=lfs -text
+data/output/final_season_added.csv filter=lfs diff=lfs merge=lfs -text
